# YOLO-ONNXRuntime-inference

./: CMakeLists.txt  README.md
include/: detector.h  helpers.h
src/: detector.cpp  helpers.cpp  main.cpp
